--- a/public/css/app.css
+++ b/public/css/app.css
@@ -815,12 +815,6 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mb-auto {
-  margin-bottom: auto;
-}
-.mt-auto {
-  margin-top: auto;
-}
 .block {
   display: block;
 }
@@ -898,6 +892,12 @@ select {
 }
 .h-7 {
   height: 1.75rem;
+}
+.h-screen {
+  height: 100vh;
+}
+.h-1 {
+  height: 0.25rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1177,6 +1177,9 @@ select {
 .border-2 {
   border-width: 2px;
 }
+.border-4 {
+  border-width: 4px;
+}
 .border-y-4 {
   border-top-width: 4px;
   border-bottom-width: 4px;
@@ -1201,6 +1204,9 @@ select {
 }
 .border-r {
   border-right-width: 1px;
+}
+.border-t-2 {
+  border-top-width: 2px;
 }
 .border-solid {
   border-style: solid;
@@ -1243,6 +1249,10 @@ select {
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .border-red-300 {
   --tw-border-opacity: 1;
